# PDP.semestral-project

./: .gitignore  CMakeLists.txt  TaskInstance.cpp  TaskInstance.h  main.cpp  parallel_job.sh  runAll.cmd  runAll.sh
input/: kralovna16.txt
reference/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt
